Remove most visible, fixup inverted buttons, adjust animations

--- a/site/web/app/themes/mb/resources/assets/styles/common/global.scss
+++ b/site/web/app/themes/mb/resources/assets/styles/common/global.scss
@@ -38,6 +38,7 @@ body {
     bottom: 0;
     left: 0;
     z-index: 90;
+    background: #212663;
     transform: scaleY(0) skewX(0);
     transform-origin: top left;
     transition: background 250ms ease-in-out;
