--- a/site/web/app/themes/mb/resources/assets/styles/layouts/pages.scss
+++ b/site/web/app/themes/mb/resources/assets/styles/layouts/pages.scss
@@ -107,8 +107,10 @@ body.services {
             @extend .circle, .hover;
           }
 
-          .button::after {
-            background: white;
+          .button {
+            z-index: 1;
+
+            @extend .inverted;
           }
         }
   
@@ -150,7 +152,7 @@ body.services {
         border-bottom: 1px solid;
       }
 
-      &.visible {
+      &:hover {
         background: $dark-blue-grey;
         color: $white;
 
